tests/paczka1/fuzzy1/27334527.err
Error in line 31: pLjuRAxYh S271 33,0
Error in line 32: pLjuRAxYh S615 32,6
